alb-resource.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alb-test-infra
