netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow
spec:
  podSelector:
    matchLabels:
      run: api
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            name: kube-system 
      - podSelector:
          matchLabels:
            run: web
      - ipBlock:
          cidr: 10.0.255.0/24 
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow
spec:
  podSelector:
    matchLabels:
      run: web
  ingress:
  - from:
    - ipBlock: 
        cidr: 10.0.255.0/24
